nuevo campbio de  prueba, me falta poner las deamas

--- a/Spotify/Spotify.vcxproj
+++ b/Spotify/Spotify.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="login.h" />
     <ClInclude Include="nodo.h" />
     <ClInclude Include="playlist.h" />
+    <ClInclude Include="Podcast.h" />
     <ClInclude Include="TitleSorter.h" />
     <ClInclude Include="usuario.h" />
     <ClInclude Include="utils.h" />
