--- a/Spotify/Spotify.vcxproj.filters
+++ b/Spotify/Spotify.vcxproj.filters
@@ -19,17 +19,11 @@
     <Filter Include="Archivos de origen\Utils">
       <UniqueIdentifier>{8d35c606-c476-48e3-bdfa-dba999d7be85}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Archivos de origen\Menu">
-      <UniqueIdentifier>{7e85f414-0e69-4401-b185-68632d69f346}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Archivos de origen\Login">
       <UniqueIdentifier>{c505dba6-bbdc-4004-9545-16e33549cf4c}</UniqueIdentifier>
     </Filter>
     <Filter Include="Archivos de encabezado\Login">
       <UniqueIdentifier>{bfb06483-281e-4d75-b686-75ac81a81a47}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Menu">
-      <UniqueIdentifier>{a07e6ad1-c7ca-4371-a77b-dced07d23409}</UniqueIdentifier>
     </Filter>
     <Filter Include="Archivos de origen\Usuario">
       <UniqueIdentifier>{1c97e08f-9849-4fa9-a33b-b92cb7edd48d}</UniqueIdentifier>
@@ -53,9 +47,6 @@
     </ClCompile>
     <ClCompile Include="login.cpp">
       <Filter>Archivos de origen\Login</Filter>
-    </ClCompile>
-    <ClCompile Include="menu.cpp">
-      <Filter>Archivos de origen\Menu</Filter>
     </ClCompile>
     <ClCompile Include="cancion.cpp">
       <Filter>Archivos de origen\Clases</Filter>
@@ -95,10 +86,10 @@
     <ClInclude Include="cancion.h">
       <Filter>Archivos de encabezado\Clases</Filter>
     </ClInclude>
-    <ClInclude Include="usuario.h">
+    <ClInclude Include="Usuario.h">
       <Filter>Archivos de encabezado\Clases</Filter>
     </ClInclude>
-    <ClInclude Include="playlist.h">
+    <ClInclude Include="ListaReproduccion.h">
       <Filter>Archivos de encabezado\Clases</Filter>
     </ClInclude>
     <ClInclude Include="DurationSorter.h">
@@ -150,6 +141,9 @@
       <Filter>Archivos de encabezado\Clases</Filter>
     </ClInclude>
     <ClInclude Include="RatingData.h">
+      <Filter>Archivos de encabezado\Clases</Filter>
+    </ClInclude>
+    <ClInclude Include="ColaCircular.h">
       <Filter>Archivos de encabezado\Clases</Filter>
     </ClInclude>
   </ItemGroup>
